--- a/nodes/templates/nodes/index.html
+++ b/nodes/templates/nodes/index.html
@@ -56,6 +56,7 @@
      layout: { improvedLayout:false,
      },
      physics: {
+       enabled: true, //Enable when starting from scratch
        stabilization: false,
        barnesHut: {
          gravitationalConstant: -80000,
