--- a/nodes/templates/nodes/navbar.html
+++ b/nodes/templates/nodes/navbar.html
@@ -1,6 +1,6 @@
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <nav class="navbar navbar-expand-sm bg-light" style="height: 6%;">
-  <a class="navbar-brand" href="index">Lightning Monitor</a>
+  <a class="navbar-brand" href="/index">Lightning Monitor</a>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -9,10 +9,15 @@
     <li class="nav-item">
       <a class="nav-link" href="/nodes">Nodes</a>
     </li>
+    <!--
     <li class="nav-item">
       <a class="nav-link" href="/blockchain">Blockchain</a>
+    </li> #}
+    {# <li class="nav-item">
+      <a class="nav-link" href="/Metrics">Metrics</a>
     </li>
+  -->
   </ul>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+  <input class="form-control form-control-dark w-100" type="text" placeholder="Double Click on channels or nodes for more information" aria-label="Search">
 
 </nav>
