Caged tables, added metrics, added metrics

--- a/nodes/templates/nodes/navbar.html
+++ b/nodes/templates/nodes/navbar.html
@@ -9,13 +9,13 @@
     <li class="nav-item">
       <a class="nav-link" href="/nodes">Nodes</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/metrics">Metrics</a>
+    </li>
     <!--
     <li class="nav-item">
       <a class="nav-link" href="/blockchain">Blockchain</a>
     </li> #}
-    {# <li class="nav-item">
-      <a class="nav-link" href="/Metrics">Metrics</a>
-    </li>
   -->
   </ul>
   <input class="form-control form-control-dark w-100" type="text" placeholder="Double Click on channels or nodes for more information" aria-label="Search">
