--- a/nodes/templates/nodes/metrics.html
+++ b/nodes/templates/nodes/metrics.html
@@ -2,41 +2,31 @@
 <html>
 <head>
 <title>Lightning Monitor</title>
+{% include "nodes/analytics.html" %}
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
-<link rel="stylesheet" href="{% static "nodes/lndmon.css" %}"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
+
 <body>
 {% include "nodes/navbar.html" %}
 
+<div class="card-columns">
+{% for indivMetric in figures %}
+  <div class="card bg-light lg-6">
+    <img class="card-img-top" src="{{ indivMetric.image_url }}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{ indivMetric.title }}</h5>
+      <p class="card-text">{{ indivMetric.description }}</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+{% endfor %}
+</div>
 
-<table class="table table-striped table-sm">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Capacity</th>
-      <th scope="col">Node 1 PubKey</th>
-      <th scope="col">Node 2 PubKey</th>
-      <th scope="col">Channel Point</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for channel in channels %}
-    <tr>
-      <th scope="row" class="td-normal"> <a href="/channels/{{ channel.channel_id  }}">{{ channel.channel_id }} </a></th>
-      <td  class="td-normal">{{ channel.capacity }} Satoshi</td>
-      <td  class="td-small"> <a href="/nodes/{{ channel.node1_pub  }}">{{ channel.node1_pub }}</a></td>
-      <td  class="td-small"> <a href="/nodes/{{ channel.node2_pub  }}">{{ channel.node2_pub }}</a></td>
-      <!-- <a href="https://live.blockcypher.com/btc-testnet/tx/{{ channel.chan_point }}"> </a> -->
-      <td  class="td-small"> {{ channel.chan_point }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
 
 
 
