--- a/nodes/templates/nodes/nodes_detail.html
+++ b/nodes/templates/nodes/nodes_detail.html
@@ -5,23 +5,10 @@
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
 <script src="{% static "nodes/visUtils.js" %}"></script>
+<link rel="stylesheet" href="{% static "nodes/lndmon.css" %}"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<style type="text/css">
-  html,
-  body {
-    height: 100%;
-    margin: 0
-  }
-
-  .box {
-    display: flex;
-    flex-flow: column;
-    width:100%;
-    height: 50%;
-  }
-</style>
 </head>
 
 <body>
@@ -94,28 +81,26 @@
     </div>
   </div>
 
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Channel ID</th>
-            <th scope="col">Connected To Pubkey</th>
-            <th scope="col">Capacity</th>
-            <th scope="col">Channel Point</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for edge in edges %}
-          <tr>
-            <th scope="row"> <a href="/channels/{{ edge.channel_id }}">{{ edge.channel_id}} </a></th>
-            <td>{{ edge.node1_pub }}</td>
-            <td>{{ edge.capacity}}</td>
-            <td>{{ edge.chan_point}}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-
-
+<table class="table table-striped table-sm table-details">
+  <thead>
+    <tr>
+      <th scope="col">Channel ID</th>
+      <th scope="col">Connected To Pubkey</th>
+      <th scope="col">Capacity</th>
+      <th scope="col">Channel Point</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for edge in edges %}
+    <tr>
+      <th scope="row" class= "td-normal"> <a href="/channels/{{ edge.channel_id }}">{{ edge.channel_id}} </a></th>
+      <td class= "td-small">{{ edge.node1_pub }}</td>
+      <td class= "td-normal">{{ edge.capacity}} SAT</td>
+      <td class= "td-small">{{ edge.chan_point}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 
 
