Fixed channel display for nodes detail, added tracking code everywhere

--- a/nodes/templates/nodes/channels.html
+++ b/nodes/templates/nodes/channels.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Lightning Monitor</title>
+{% include "nodes/analytics.html" %}
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
 <link rel="stylesheet" href="{% static "nodes/lndmon.css" %}"/>
