--- a/nodes/templates/nodes/channels_detail.html
+++ b/nodes/templates/nodes/channels_detail.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Lightning Monitor</title>
+{% include "nodes/analytics.html" %}
 {% load static %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
