--- a/nodes/templates/nodes/index.html
+++ b/nodes/templates/nodes/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Lightning Monitor</title>
+{% include "nodes/analytics.html" %}
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
 <script src="{% static "nodes/visUtils.js" %}"></script>
