Added search, capacity tags

--- a/nodes/templates/nodes/navbar.html
+++ b/nodes/templates/nodes/navbar.html
@@ -18,6 +18,8 @@
     </li> #}
   -->
   </ul>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Double Click on channels or nodes for more information" aria-label="Search">
+  <form class=" w-100" action="/search" method="GET" >
+  <input class= "form-control form-control-dark w-100" type="text" name="search_term" placeholder="Double Click on channels or nodes for more information" aria-label="Search" >
+</form>
 
 </nav>
