--- a/nodes/templates/nodes/nodes_detail.html
+++ b/nodes/templates/nodes/nodes_detail.html
@@ -32,7 +32,7 @@
 
     // create an array with edges
     populateGraph(nodesData,edgesData);
-
+    addLabels(edges,edgesData);
     // create a network
     var container = document.getElementById('mynetwork');
     var data = {
