--- a/nodes/templates/nodes/channels_detail.html
+++ b/nodes/templates/nodes/channels_detail.html
@@ -45,6 +45,7 @@
 
     // create an array with edges
     populateGraph(nodesData,edgesData);
+    addLabels(edges,edgesData);
 
     // create a network
     var container = document.getElementById('mynetwork');
