--- a/nodes/templates/nodes/channels.html
+++ b/nodes/templates/nodes/channels.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Lightning Monitor</title>
+<title>LNDMON | Channels</title>
 {% include "nodes/analytics.html" %}
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
@@ -23,21 +23,43 @@
       <th scope="col">Node 1 PubKey</th>
       <th scope="col">Node 2 PubKey</th>
       <th scope="col">Channel Point</th>
+      <th scope="col">Last Update</th>
     </tr>
   </thead>
   <tbody>
     {% for channel in channels %}
     <tr>
-      <th scope="row" class="td-normal"> <a href="/channels/{{ channel.channel_id  }}">{{ channel.channel_id }} </a></th>
+      <th scope="row" class="td-normal"> <a href="/channels/{{ channel.chan_id  }}">{{ channel.chan_id }} </a></th>
       <td  class="td-normal">{{ channel.capacity }} Satoshi</td>
       <td  class="td-small"> <a href="/nodes/{{ channel.node1_pub  }}">{{ channel.node1_pub }}</a></td>
       <td  class="td-small"> <a href="/nodes/{{ channel.node2_pub  }}">{{ channel.node2_pub }}</a></td>
       <!-- <a href="https://live.blockcypher.com/btc-testnet/tx/{{ channel.chan_point }}"> </a> -->
       <td  class="td-small"> {{ channel.chan_point }}</td>
+      <td  class="td-small"> {{ channel.last_update }}</td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+
+<nav aria-label="Channels pagination">
+  <ul class="pagination justify-content-center">
+      {% if channels.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page=1">&laquo; First </a></li>
+        <li class="page-item"><a class="page-link" href="?page={{ channels.previous_page_number }}">Previous</a></li>
+      {% endif %}
+        <li class="page-item active">
+          <span class="page-link">
+             Page {{ channels.number }}
+           </span>
+          </li>
+      {% if channels.has_next %}
+          <li class="page-item"><a class="page-link" href="?page={{ channels.next_page_number }}">Next</a></li>
+          <li class="page-item"><a class="page-link" href="?page={{ channels.paginator.num_pages }}">Last &raquo;</a></li>
+      {% endif %}
+    </ul>
+</nav>
+
+
 
 
 
