--- a/nodes/templates/nodes/navbar.html
+++ b/nodes/templates/nodes/navbar.html
@@ -1,7 +1,6 @@
-<!-- A grey horizontal navbar that becomes vertical on small screens -->
+<meta name="description" content="View Lightning Network channels and nodes in detail and view historical data across a growing dataset">
 <nav class="navbar navbar-expand-sm bg-light" style="height: 6%;">
   <a class="navbar-brand" href="/index">Lightning Monitor</a>
-  <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="/channels">Channels</a>
