Added landing and about pages

--- a/nodes/templates/nodes/channels_detail.html
+++ b/nodes/templates/nodes/channels_detail.html
@@ -69,7 +69,7 @@
     network.setOptions({edges:{smooth:{type:'dynamic'}}});
 
   </script>
-<div class="row">
+<div class="row" >
   <div class="card col-sm-6" style="width: 50%;">
     <div class="card-body">
       <h5 class="card-title">Chan ID: {{ edgeInfo.chan_id }}</h5>
@@ -90,8 +90,9 @@
             <p> No other dates available </p>
           {% endfor %}
         </ul>
-    </div> <!-- Scroll box -->
-  </div>  <!-- Card -->
+      </div> <!-- Scroll box -->
+    </div>  <!-- Card body -->
+  </div> <!-- Card -->
 </div>  <!-- Row -->
 
 <div class="row">
@@ -121,6 +122,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+{% include "nodes/footer.html" %}
 </body>
 </html>
