--- a/nodes/templates/nodes/navbar.html
+++ b/nodes/templates/nodes/navbar.html
@@ -1,7 +1,10 @@
 <meta name="description" content="View Lightning Network channels and nodes in detail and view historical data across a growing dataset">
-<nav class="navbar navbar-expand-sm bg-light" style="height: 6%;">
+<nav class="navbar navbar-expand-sm bg-light" style="min-height: 60px;">
   <a class="navbar-brand" href="/index">Lightning Monitor</a>
   <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="/visualiser">Visualise</a>
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="/channels">Channels</a>
     </li>
@@ -10,6 +13,9 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/metrics">Metrics</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/about">About</a>
     </li>
     <!--
     <li class="nav-item">
