Dabase maintainer script

--- a/nodes/templates/nodes/visualiser.html
+++ b/nodes/templates/nodes/visualiser.html
@@ -39,7 +39,7 @@
   // create an array with edges
   var edges = new vis.DataSet([]);
 
-  //Get network data
+  //Get passed network data
   var networkData = {{ jsonData | safe }} ;
   var networkPoz = {{ cachedPoz | safe }} ;
 
