--- a/nodes/templates/nodes/about.html
+++ b/nodes/templates/nodes/about.html
@@ -19,42 +19,43 @@
 
 <div class="container" style="width: 90%; padding-bottom:5vh;">
 <div class="card">
+  <h5 class="card-header card-title">Motivation</h5>
   <div class="card-body">
-    <h5 class="card-title">Motivation</h5>
+
     <p class="card-text">The Lightning network, the most prominent proposal for enabling micro-transactions and addressing the transaction throughput bottleneck of Bitcoin, has seen relatively little work dedicated to it. With an increasing number of active nodes on both the testing and main blockchains, data can now be gathered from live peers conducting transactions using implementations of the Lightning protocol standards.</p>
   </div>
 </div>
 
 <div class="card">
+  <h5 class="card-header card-title">Aims</h5>
   <div class="card-body">
-    <h5 class="card-title">Aims</h5>
     <p class="card-text">Is it hoped that this tool will allow a better understanding the practicality of payment channel networks and identify problems arising from their real-world use, and potentially guide future research and development of this technology with grounded data on network behaviour, rather that assumptions.</p>
   </div>
 </div>
 
 <div class="card">
+  <h5 class=" card-header card-title">Our nodes:</h5>
   <div class="card-body">
-    <h5 class="card-title">Our nodes:</h5>
     <p class="card-text">We are currently running 3 nodes (shown below) for data collection. Connecting with out nodes helps us maintain an accurate view of the network</p>
 
 
 <div class="card mx-auto" >
   <div class="card-body">
-    <h5 class="card-title">London-Connect</h5>
+    <h5 class="card-title">London-Connect <span class="badge badge-pill badge-secondary">Testnet</span></h5>
     <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/nodes/02f82a1188bb4baa885de6c0d14276db056aa9da768de545c4fc7349379b5670cb">  02f82a1188bb4baa885de6c0d14276db056aa9da768de545c4fc7349379b5670cb</a> </h6>
   </div>
 </div>
 
 <div class="card mx-auto" >
   <div class="card-body">
-    <h5 class="card-title">Frankfurt-Connect</h5>
+    <h5 class="card-title">Frankfurt-Connect <span class="badge badge-pill badge-info">Mainnet</span> </h5>
     <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/nodes/023b14be2d7a3fc2b24eb14b25d44afc41cb8d0a6e01067da36ea3299e2f9bfe70">  023b14be2d7a3fc2b24eb14b25d44afc41cb8d0a6e01067da36ea3299e2f9bfe70</a> </h6>
   </div>
 </div>
 
 <div class="card mx-auto" >
   <div class="card-body">
-    <h5 class="card-title">Lnd-san-francisco</h5>
+    <h5 class="card-title">Lnd-san-francisco <span class="badge badge-pill badge-secondary">Testnet</span></h5>
     <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/nodes/02b9804133643b78aa6f6221284ddef81785f88f861931a3e574353e3a642c0f9f">  02b9804133643b78aa6f6221284ddef81785f88f861931a3e574353e3a642c0f9f</a> </h6>
   </div>
 </div>
