--- a/nodes/templates/nodes/metrics.html
+++ b/nodes/templates/nodes/metrics.html
@@ -9,6 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 </head>
 
 
@@ -26,7 +27,47 @@
     </div>
   </div>
 {% endfor %}
-</div>
+<div class="card bg-light lg-6">
+  <canvas id="myChart"></canvas>
+  <div class="card-body">
+    <h5 class="card-title"> GraphTest</h5>
+    <p class="card-text"> Lorem ipsum </p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div >
+
+      <script>
+      //Get passed network data
+      // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
+      var data_set =  [1,2,3,4,5,6,7,8,9,0,0,0,0,-10,-9];
+      var ctx = document.getElementById('myChart').getContext('2d');
+      var chart = new Chart(ctx, {
+          // The type of chart we want to create
+          type: 'line',
+          // The data for our dataset
+          data: {
+              labels: data_set,
+              datasets: [{
+                  label: "GraphTest",
+                  backgroundColor: 'rgb(255, 99, 132)',
+                  borderColor: 'rgb(255, 99, 132)',
+                  data: data_set,
+              }]
+          },
+
+          // Configuration options go here
+          options: {}
+      });
+      </script>
+    </div>
+  </div>
+</div> <!-- Card test -->
+
+
+
+
+</div> <!-- Card columns -->
+
+
 
 
 
