--- a/nodes/templates/nodes/nodes_detail.html
+++ b/nodes/templates/nodes/nodes_detail.html
@@ -15,7 +15,7 @@
 <body>
 {% include "nodes/navbar.html" %}
 
-    <div class="box" id="mynetwork"  style="border: 1px solid red;">
+    <div class="box" id="mynetwork">
    </div>
 
   <script type="text/javascript">
