--- a/nodes/templates/nodes/metric_detail.html
+++ b/nodes/templates/nodes/metric_detail.html
@@ -31,6 +31,7 @@
     <p class="card-text"> {{ metric.description }}</p>
   </div>
 </div> <!-- Card -->
+{% if metric.dataset_url %}
 <canvas id="{{ metric.dataset_url }}"></canvas>
 <script>
 //Get passed network data
@@ -39,20 +40,64 @@ var data_sets =  {{ metric.json_data | safe }} ;
 var ctx = document.getElementById('{{ metric.dataset_url }}').getContext('2d');
 var chart = new Chart(ctx, {
     // The type of chart we want to create
-    type: 'scatter',
+    type: {{ metric.dataset_type |safe }} ,
     // The data for our dataset
     data: { datasets: data_sets },
     // Configuration options go here
     options: {
       scales: {
         xAxes: [{
-          type: 'time'
+          type: 'time',
         }]
       }
     }
 });
 </script>
+{% else %}
+<!-- Image fallback -->
+  <img class="card-img-top" src="/{{ metric.image_url }}" alt="{{ metric.description }}">
+{% endif %}
 </div> <!-- Container -->
+
+<div class="card-columns">
+{% for indivMetric in related_metrics %}
+  <div class="card bg-light lg-6">
+    {% if indivMetric.dataset_url %}
+    <canvas id="{{ indivMetric.dataset_url }}"></canvas>
+
+    <script>
+    //Get passed network data
+    // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
+    var data_sets =  {{ indivMetric.json_data | safe }} ;
+    var ctx = document.getElementById('{{ indivMetric.dataset_url }}').getContext('2d');
+    var chart = new Chart(ctx, {
+        // The type of chart we want to create
+        type: {{ indivMetric.dataset_type |safe }},
+        // The data for our dataset
+        data: { datasets: data_sets },
+        // Configuration options go here
+        options: {
+          scales: {
+            xAxes: [{
+              type: 'time'
+            }]
+          }
+        }
+    });
+    </script>
+    {% else %}
+      <img class="card-img-top" src="/{{ indivMetric.image_url }}" alt="{{ indivMetric.description }}">
+    {% endif %}
+    <div class="card-body">
+      <h5 class="card-title">{{ indivMetric.title }} <a href="/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
+      <p class="card-text">{{ indivMetric.description }} </p>
+    </div>
+  </div>
+{% empty %}
+      <li>View more metrics on at <a href="/metrics">Metrics</a> </li>
+{% endfor %}
+</div>
+
 
 
 <!-- Bootstrap scripts -->
