--- a/nodes/templates/nodes/metrics.html
+++ b/nodes/templates/nodes/metrics.html
@@ -17,37 +17,44 @@
 
 <body>
 {% include "nodes/navbar.html" %}
+<div class="index-title jumbotron-fluid">
+<h1>Testnet Metrics</h1>
+</div> <!-- Intro -->
+
 
 <div class="card-columns">
 {% for indivMetric in figures %}
   <div class="card bg-light lg-6">
+    {% if indivMetric.dataset_url %}
     <canvas id="{{ indivMetric.dataset_url }}"></canvas>
-    <!-- <img class="card-img-top" src="{{ indivMetric.image_url }}" alt="{{ indivMetric.description }}"> -->
+
+    <script>
+    //Get passed network data
+    // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
+    var data_sets =  {{ indivMetric.json_data | safe }} ;
+    var ctx = document.getElementById('{{ indivMetric.dataset_url }}').getContext('2d');
+    var chart = new Chart(ctx, {
+        // The type of chart we want to create
+        type: {{ indivMetric.dataset_type | safe}},
+        // The data for our dataset
+        data: { datasets: data_sets },
+        // Configuration options go here
+        options: {
+          scales: {
+            xAxes: [{
+              type: 'time'
+            }]
+          }
+        }
+    });
+    </script>
+    {% else %}
+      <img class="card-img-top" src="{{ indivMetric.image_url }}" alt="{{ indivMetric.description }}">
+    {% endif %}
     <div class="card-body">
       <h5 class="card-title">{{ indivMetric.title }} <a href="/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
       <p class="card-text">{{ indivMetric.description }} </p>
     </div>
-
-      <script>
-      //Get passed network data
-      // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
-      var data_sets =  {{ indivMetric.json_data | safe }} ;
-      var ctx = document.getElementById('{{ indivMetric.dataset_url }}').getContext('2d');
-      var chart = new Chart(ctx, {
-          // The type of chart we want to create
-          type: 'scatter',
-          // The data for our dataset
-          data: { datasets: data_sets },
-          // Configuration options go here
-          options: {
-            scales: {
-              xAxes: [{
-                type: 'time'
-              }]
-            }
-          }
-      });
-      </script>
   </div>
 {% empty %}
       <li>No metrics are currently available</li>
