--- a/static_files/nodes/lndmon.css
+++ b/static_files/nodes/lndmon.css
@@ -1,14 +1,17 @@
 html,
 body {
-  height: 100%;
-  margin: 0
-}
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  }
+
 
 .box {
   display: flex;
   flex-flow: column;
   width:100%;
-  height: 50%;
+  min-height: 50vh;
+  height:50%;  //While these two seem redundant, the first one makes the graph resize
 }
 
 tr,td {
@@ -36,4 +39,17 @@ table {
     padding: 3rem 1.5rem;
     text-align: center;
     align:center;
+}
+
+.spacer {
+    flex: 1;
+}
+
+.footer {
+  /* position: relative;
+  bottom: 0; */
+  width: 100%;
+  height: 50px; /* Set the fixed height of the footer here */
+  line-height: 50px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
