--- a/nodes/templates/nodes/metric_detail.html
+++ b/nodes/templates/nodes/metric_detail.html
@@ -39,18 +39,9 @@
 var data_sets =  {{ metric.json_data | safe }} ;
 var ctx = document.getElementById('{{ metric.dataset_url }}').getContext('2d');
 var chart = new Chart(ctx, {
-    // The type of chart we want to create
-    type: {{ metric.dataset_type |safe }} ,
-    // The data for our dataset
-    data: { datasets: data_sets },
-    // Configuration options go here
-    options: {
-      scales: {
-        xAxes: [{
-          type: 'time',
-        }]
-      }
-    }
+    type: {{ metric.dataset_type | safe }},
+    data: {  {% if metric.labels %}labels: {{metric.labels | safe}},{% endif %}datasets: data_sets }
+    {% if metric.dataset_options %},{{ metric.dataset_options |safe }}{% endif %}
 });
 </script>
 {% else %}
